# swagger/v1/swagger.yaml
@@ -280,28 +280,28 @@ paths:
               examples:
                 test_example:
                   value:
-                    id: 194
-                    population: 892520
-                    square: 16865.95
-                    name: Narcisa Trafficway
-                    population_density: 57.17
-                    square_housing_stock: 12.12
-                    living_square_per_person: 69.78
-                    district_id: 200
-                    2gis_id: 8932554276
-                    emblem_url: http://localhost:3000/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBY0k9IiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--e22d2e8d4d40e8730f12add2439f3146127014b3/emblem.png
+                    id: 507
+                    population: 240014
+                    square: 85290.16
+                    name: Сосновая пл.
+                    population_density: 83.62
+                    square_housing_stock: 81.49
+                    living_square_per_person: 43.72
+                    district_id: 522
+                    2gis_id: 9838922285
+                    emblem_url: http://localhost:3000/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBdnNCIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--6e13a8ac21bbf3a5527fc71e1848f8fb7b50e355/emblem.png
                     automatic_post_office_stats:
                       placed: 0
                       not_placed: 0
                     polygon:
-                    - - - 86327.030572
-                        - 20610.080019
-                      - - 95724.157167
-                        - 81046.115652
+                    - - - 27336.590837
+                        - 51054.173253
+                      - - 31317.881854
+                        - 44153.541166
                     polygon_type: 1
                     center_coord:
-                    - 99590.791873
-                    - 15469.370144
+                    - 82013.380588
+                    - 82265.087724
               schema:
                 "$ref": "#/components/schemas/area_with_polygon"
         '404':
@@ -326,29 +326,29 @@ paths:
               examples:
                 test_example:
                   value:
-                  - id: 197
-                    population: 648177
-                    square: 19727.06
-                    name: Ty Flat
-                    population_density: 66.37
-                    square_housing_stock: 54.73
-                    living_square_per_person: 84.89
-                    district_id: 203
-                    2gis_id: 4503016449
-                    emblem_url: http://localhost:3000/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBY1U9IiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--defcbc3dee2da1ef49667c92c47419448a133a27/emblem.png
+                  - id: 510
+                    population: 649678
+                    square: 31988.27
+                    name: Молодежная проспект
+                    population_density: 89.85
+                    square_housing_stock: 91.66
+                    living_square_per_person: 34.25
+                    district_id: 525
+                    2gis_id: 3858235144
+                    emblem_url: http://localhost:3000/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBdjRCIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--1e5fdb85c9d8b1805688945941d0b7ab1bc458be/emblem.png
                     automatic_post_office_stats:
                       placed: 0
                       not_placed: 0
-                  - id: 198
-                    population: 423975
-                    square: 10521.46
-                    name: Ortiz Point
-                    population_density: 46.99
-                    square_housing_stock: 88.91
-                    living_square_per_person: 55.19
-                    district_id: 203
-                    2gis_id: 8576227787
-                    emblem_url: http://localhost:3000/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBY1k9IiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--76d95a718216c8e7c1907717a080a1a97cad6774/emblem.png
+                  - id: 511
+                    population: 554031
+                    square: 58747.16
+                    name: Сосновая ул.
+                    population_density: 88.39
+                    square_housing_stock: 57.33
+                    living_square_per_person: 88.11
+                    district_id: 525
+                    2gis_id: 4877239928
+                    emblem_url: http://localhost:3000/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBdjhCIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--1546d24abffc1d73ce3de9b5f7ef30fc72b6140b/emblem.png
                     automatic_post_office_stats:
                       placed: 0
                       not_placed: 0
@@ -376,24 +376,67 @@ paths:
               examples:
                 test_example:
                   value:
-                    id: 170
+                    id: 447
                     geo_data:
-                    - 38330.035799
-                    - 96948.031511
-                    area_id: 199
-                    is_placed: false
-                    address: 534 Izola Lake, South Dennyton, TN 15820
-                    placement_object_type_id: 176
-                    people_in_range: 53193
-                    distance_to_metro: 429
-                    distance_to_bus: 558
-                    predict_a: 88009.106
-                    predict_b: 14910.847
-                    predict_c: 52527.153
+                    - 16343.510113
+                    - 91033.052807
+                    area_id: 512
+                    is_placed: true
+                    address: 959883 Россия, Уфа, пр. Вокзальная, 590
+                    placement_object_type_id: 462
+                    people_in_range: 93215
+                    distance_to_metro: 523
+                    distance_to_bus: 194
+                    predict_a: 35915.483
+                    predict_b: 68450.318
+                    predict_c: 56991.305
               schema:
                 "$ref": "#/components/schemas/automatic_post_office"
         '404':
           description: Not found
+  "/automatic_post_offices/export_xlsx":
+    get:
+      summary: Export xlsx file with automatic post offices data
+      tags:
+      - Automatic post offices
+      parameters:
+      - name: area_id
+        in: query
+        description: Filter by area id
+        required: false
+        schema:
+          type: number
+      - name: district_id
+        in: query
+        description: Filter by district id
+        required: false
+        schema:
+          type: number
+      - name: placement_object_type_id
+        in: query
+        description: Filter by placement object type id
+        required: false
+        schema:
+          type: number
+      - name: is_placed
+        in: query
+        description: Automatic post office is placed?
+        required: false
+        schema:
+          type: boolean
+      - name: sort
+        in: query
+        description: 'Sorting by object fields. Before field: ''+'' or nothing ->
+          ASC, ''-'' -> DESC'
+        required: false
+        example: "-distance_to_metro,distance_to_bus,+predict_a"
+        schema:
+          type: string
+      responses:
+        '404':
+          description: Not found
+        '200':
+          description: Successful
   "/automatic_post_offices":
     get:
       summary: Array automatic post offices with pagination
@@ -457,20 +500,20 @@ paths:
                 test_example:
                   value:
                     automatic_post_offices:
-                    - id: 197
+                    - id: 476
                       geo_data:
-                      - 34386.579756
-                      - 57500.898948
-                      area_id: 225
-                      is_placed: true
-                      address: Apt. 416 65706 Rebbeca Landing, Sporerborough, MO 11063-0938
-                      placement_object_type_id: 202
-                      people_in_range: 28497
-                      distance_to_metro: 363
-                      distance_to_bus: 724
-                      predict_a: 61153.151
-                      predict_b: 20137.882
-                      predict_c: 58323.485
+                      - 46589.274687
+                      - 27889.421502
+                      area_id: 540
+                      is_placed: false
+                      address: 524536 Россия, Омск, пл. Октябрьская, 845 кв. 212
+                      placement_object_type_id: 490
+                      people_in_range: 42735
+                      distance_to_metro: 941
+                      distance_to_bus: 653
+                      predict_a: 13048.487
+                      predict_b: 39384.378
+                      predict_c: 85121.077
                     meta:
                       current_page: 1
                       next_page: 2
@@ -490,21 +533,21 @@ paths:
               examples:
                 test_example:
                   value:
-                  - id: 231
-                    name: White Square
-                    short_name: MA
-                    square: 18.14
-                    population: 927409
-                    2gis_id: 7680513544
+                  - id: 555
+                    name: площадь Заречная
+                    short_name: AZ
+                    square: 10.13
+                    population: 888626
+                    2gis_id: 9554758284
                     automatic_post_office_stats:
                       placed: 0
                       not_placed: 0
-                  - id: 232
-                    name: Jami Stravenue
-                    short_name: UT
-                    square: 11.68
-                    population: 336733
-                    2gis_id: 2285683510
+                  - id: 556
+                    name: пл. Свободы
+                    short_name: GA
+                    square: 51.16
+                    population: 580071
+                    2gis_id: 6883795555
                     automatic_post_office_stats:
                       placed: 0
                       not_placed: 0
@@ -532,24 +575,24 @@ paths:
               examples:
                 test_example:
                   value:
-                    id: 233
-                    name: Akilah Brooks
-                    short_name: TN
-                    square: 92.73
-                    population: 404606
-                    2gis_id: 4084116779
+                    id: 557
+                    name: улица Полевая
+                    short_name: DE
+                    square: 85.79
+                    population: 230026
+                    2gis_id: 7867859421
                     automatic_post_office_stats:
                       placed: 0
                       not_placed: 0
                     polygon:
-                    - - - 75886.212783
-                        - 68204.103296
-                      - - 45199.605661
-                        - 16628.592575
-                    polygon_type: 1
+                    - - - 36855.330323
+                        - 63675.352639
+                      - - 99984.913896
+                        - 64700.336089
+                    polygon_type: 0
                     center_coord:
-                    - 46466.204008
-                    - 94227.153143
+                    - 52886.757063
+                    - 84550.627944
               schema:
                 "$ref": "#/components/schemas/district_with_polygon"
         '404':
@@ -567,10 +610,10 @@ paths:
               examples:
                 test_example:
                   value:
-                  - id: 204
-                    name: Luxury Goods & Jewelry
-                  - id: 205
-                    name: Sports
+                  - id: 492
+                    name: Legal Services
+                  - id: 493
+                    name: Computer Networking
               schema:
                 type: array
                 items:
